--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -505,6 +505,10 @@
                 <button class="btn btn-secondary btn-right" (click)="updateOnly()">
                   Save
                 </button>
+                <a *ngIf="subTransactionInfo?.isParent === false"
+                  class="btn btn-primary btn-right" (click)="saveAndReturnToParent()">
+                  Return to {{ subTransactionInfo.transactionTypeDescription }}
+                </a>
               </div>
               <ng-template #createActions>
                 <button *ngIf="!subTransactionInfo || subTransactionInfo?.isParent"
