--- a/front-end/src/app/reports/reportheader/reportheader.component.html
+++ b/front-end/src/app/reports/reportheader/reportheader.component.html
@@ -31,15 +31,15 @@
                       </button> &nbsp;&nbsp;&nbsp;-->
           
                       <button  class="btn btn-primary" (click)="showFilter()">
-                      <i class="fas fa-filter"></i> Filter
-                      </button> &nbsp;&nbsp;&nbsp;
+                      <i class="fas fa-filter"></i>Filter
+                      </button>&nbsp;&nbsp;
   
                       <button *ngIf="isReportViewActive()"class="btn btn-primary" (click)="recycleReports()">
-                      <i class="trash-icon"></i> Recycle
-                      </button>  &nbsp;&nbsp;&nbsp;      
+                      <i class="trash-icon"></i>Recycle
+                      </button>   
 
                       <button  *ngIf="isRecycleBinViewActive()" class="btn btn-primary" (click)="showReports()">
-                      <i class="table-icon"></i> Show Reports
+                      <i class="table-icon"></i>Show Reports
                       </button>      
   
                       <!--<div class="input-group pl-0 transactions__trx-search">
