--- a/front-end/src/app/contacts/contacts-table/contacts-table.component.html
+++ b/front-end/src/app/contacts/contacts-table/contacts-table.component.html
@@ -18,7 +18,7 @@
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('id')" [class]="getSortClass('id')" (click)="changeSortDirection('id')">Entity Number
         </th>
-        <th [@fadeInOut] *ngIf="isColumnVisible('canCmteId')" [class]="getSortClass('canCmteId')" (click)="changeSortDirection('canCmteId')">Candidate/Committee ID
+        <th [@fadeInOut] *ngIf="isColumnVisible('canCmteId')" [class]="getSortClass('canCmteId')" (click)="changeSortDirection('canCmteId')">Candidate/Committee <br /> ID
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('street')" [class]="getSortClass('street')" (click)="changeSortDirection('street')">Address
         </th>
@@ -37,6 +37,8 @@
         <th [@fadeInOut] *ngIf="isColumnVisible('candOfficeState')" [class]="getSortClass('candOfficeState')" (click)="changeSortDirection('candOfficeState')">Candidate Office <br /> State
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('candOfficeDistrict')" [class]="getSortClass('candOfficeDistrict')" (click)="changeSortDirection('candOfficeDistrict')">Candidate Office <br /> District
+        </th>
+        <th [@fadeInOut] *ngIf="(isColumnVisible('deletedDate') && isRecycleBinViewActive())" [class]="getSortClass('deletedDate')" (click)="changeSortDirection('deletedDate')">Deleted Date <br />and time
         </th>
 
         <th class="bulk_action">
@@ -89,7 +91,10 @@
         <td [@fadeInOut] *ngIf="isColumnVisible('candOffice')">{{cnt.candOffice}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('candOfficeState')">{{cnt.candOfficeState}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('candOfficeDistrict')">{{cnt.candOfficeDistrict}}</td>
-
+        <td [@fadeInOut] *ngIf="isColumnVisible('deletedDate')">{{cnt.deletedDate === ''? '': (cnt.deletedDate| date: 'MM/dd/yyyy @ hh:mm:ss a')}}
+        </td>
+        <!--<td [@fadeInOut] *ngIf="(isColumnVisible('deletedDate') && isRecycleBinViewActive())">{{cnt.deletedDate}}
+        </td>-->
         <td>
           <div [@fadeInOut] *ngIf="isRecycleBinViewActive()">
             <button class="btn btn-sm btn-primary" (click)="restoreContact(cnt)">
@@ -320,6 +325,23 @@
                     Candidate/Committee ID
                   </span>
                 </label>
+              </div>
+            </div>
+            <div class="col-md">
+              <div class="checkbox">
+                <label>
+                  <input [(ngModel)]="getSortableColumn('deletedDate').checked"
+                    (change)="toggleVisibility('deletedDate', $event)" type="checkbox"
+                    [disabled]="getSortableColumn('deletedDate').disabled">
+                  <span [ngClass]="{'disabled-column-option':getSortableColumn('deletedDate').disabled}">
+                    Deleted Date
+                  </span>
+                </label>
+              </div>
+            </div>
+            <div class="col-md">
+              <div  class="checkbox">
+               &nbsp;
               </div>
             </div>
           </div>  
