--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -79,6 +79,8 @@
                       <ng-container *ngIf="col?.inputGroup">
                         <div class="input-group-prepend">
                           <span class="input-group-text">
+                            <!-- <i *ngIf="col?.inputIcon" [class]="col?.inputIcon" aria-hidden="true"></i>
+                            <span *ngIf="col?.value && !col?.inputIcon">{{col?.value}}</span> -->
                             <i [class]="col?.inputIcon" aria-hidden="true"></i>
                           </span>
                         </div>
@@ -485,12 +487,41 @@
         [subTransactions]="subTransactions"
         [formType]="formType"
       ></app-sub-transactions-table>
-      <div class="forms__btn-container">
-        <button *ngIf="subTransactionInfo?.isParent" 
+      <div class="forms__btn-container"> 
+        <button *ngIf="subTransactionInfo?.isParent && !multipleSubTransactionInfo" 
           class="btn btn-primary btn-left" (click)="saveForAddSub()">
           <i class="plus-icon-circle" aria-hidden="true"></i>
           Add {{ subTransactionInfo.subTransactionTypeDescription }}
         </button>
+
+        <div *ngIf="subTransactionInfo?.isParent && multipleSubTransactionInfo" 
+            ngbDropdown class="d-inline-block" placement="bottom-right">
+          <button class="btn btn-primary" id="jfMemoDropdwon" ngbDropdownToggle>
+              <i class="plus-icon-circle" aria-hidden="true"></i>
+              Add JF Transfer Memo
+          </button>
+          <div ngbDropdownMenu aria-labelledby="jfMemoDropdwon">
+              <ng-container *ngFor="let jfMemo of multipleSubTransactionInfo">
+                  <button ngbDropdownItem (click)="saveForAddMemoSub(jfMemo)">
+                    {{jfMemo.subTransactionTypeDescription}}
+                  </button>
+              </ng-container>
+            <!-- <button ngbDropdownItem>Action - 1</button>
+            <button ngbDropdownItem>Another Action</button>
+            <button ngbDropdownItem>Something else is here</button> -->
+          </div>
+        </div>
+
+        <!-- multipleSubTransactionInfo -->
+        <!-- <div class="dropdown">
+            Dropdown button
+          </button>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Link 1</a>
+            <a class="dropdown-item" href="#">Link 2</a>
+            <a class="dropdown-item" href="#">Link 3</a>
+          </div>
+        </div> -->
       </div>
     </section>
     <footer>
