--- a/front-end/src/app/forms/form-99/f99/f99.component.html
+++ b/front-end/src/app/forms/form-99/f99/f99.component.html
@@ -17,11 +17,11 @@
     <div class="form__steps">
       <app-steps
         [steps]="[
-          {text: 'Type', step: 'step_1'},
-          {text: 'Form', step: 'step_2'},
-          {text: 'Preview', step: 'step_3'},
-          {text: 'Sign', step: 'step_4'},
-          {text: 'Submit', step: 'step_5'}
+        {text: 'Type', step: 'step_1', edit: editMode},
+        {text: 'Form', step: 'step_2', edit: editMode},
+        {text: 'Preview', step: 'step_3', edit: editMode},
+        {text: 'Sign', step: 'step_4', edit: editMode},
+        {text: 'Submit', step: 'step_5', edit: editMode}
         ]"
         [current_step]="currentStep"
       >
