Fixing firefox grey shading style issue

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -60,6 +60,10 @@
       @include clearfix();
     }
     section {
+      .content {
+        min-height: 100vh;
+        position: relative;
+      }
       .row {
         margin-bottom: 20px;
         .forms__candidate-title {
