--- a/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-sidebar/transaction-sidebar.component.scss
@@ -40,6 +40,10 @@
   display: inline-block;
   
 }
+#scrollable-dropdown-menu ngb-typeahead-window {
+  max-height: 150px;
+  overflow-y: auto;
+ }
  #sidebar_signBtn{
   margin: auto;
   width: 90%;
