Adding scrollbar to sidebar

--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
@@ -3,6 +3,10 @@
 .sidebar {
   background-color: $primaryBlue;
   min-height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  overflow-y: scroll;
   &.sidebar-hidden {
     .sidebar__toggle {
       .toggle-sidebar {
