--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -259,10 +259,15 @@
                   </span>
                 </button>
               </div>
-              <div>
-                <textarea class="editor" formControlName="reasonText" contenteditable="true" placeholder="Enter text here..."
-                  role="textarea" (input)="editorChange($event)" (paste)="removeHTML($event)" #htmlEditor></textarea>
-              </div>
+              <div
+                class="editor"
+                contenteditable="true"
+                placeholder="Enter text here..."
+                role="textarea"
+                (input)="editorChange($event)"
+                (paste)="removeHTML($event)"
+                #htmlEditor
+              ></div>
             </div>
           </div>
         </div>
