--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -493,35 +493,24 @@
           <i class="plus-icon-circle" aria-hidden="true"></i>
           Add {{ subTransactionInfo.subTransactionTypeDescription }}
         </button>
-
         <div [ngStyle]="{'margin-bottom': dropdownMarginBottom}">
           <div *ngIf="subTransactionInfo?.isParent && multipleSubTransactionInfo" 
-              ngbDropdown class="d-inline-block" placement="bottom-right"
-              (openChange)="multipleMemoDropdownChanged($event)">
-            <button class="btn btn-primary" id="jfMemoDropdwon" ngbDropdownToggle>
-                <i class="plus-icon-circle" aria-hidden="true"></i>
-                Add JF Transfer Memo
+            ngbDropdown class="d-inline-block" placement="bottom-right"
+             (openChange)="multipleMemoDropdownChanged($event)">
+            <button class="btn btn-primary" id="jfMemoDropdown" ngbDropdownToggle>
+              <i class="plus-icon-circle" aria-hidden="true"></i>
+              Add JF Transfer Memo
+              <i class="dropdown-icon" aria-hidden="true"></i>
             </button>
-            <div ngbDropdownMenu aria-labelledby="jfMemoDropdwon">
-                <ng-container *ngFor="let jfMemo of multipleSubTransactionInfo">
-                    <button ngbDropdownItem (click)="saveForAddMemoSub(jfMemo)">
-                      {{jfMemo.subTransactionTypeDescription}}
-                    </button>
-                </ng-container>
+            <div ngbDropdownMenu aria-labelledby="jfMemoDropdown">
+              <ng-container *ngFor="let jfMemo of multipleSubTransactionInfo">
+                <button ngbDropdownItem (click)="saveForAddMemoSub(jfMemo)">
+                  {{jfMemo.subTransactionTypeDescription}}
+                </button>
+              </ng-container>
             </div>
           </div>
         </div>
-
-        <!-- multipleSubTransactionInfo -->
-        <!-- <div class="dropdown">
-            Dropdown button
-          </button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Link 1</a>
-            <a class="dropdown-item" href="#">Link 2</a>
-            <a class="dropdown-item" href="#">Link 3</a>
-          </div>
-        </div> -->
       </div>
     </section>
     <footer>
