--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -131,6 +131,11 @@
         margin: 0 auto;
         padding: 0;
         width: 80%;
+        #jfMemoDropdown {
+          &:after {
+            display: none;
+          }
+        }
         @include media(tablet) {
           margin: 0;
           padding: 0;
