--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -341,7 +341,7 @@
             <i class="plus-icon-circle" aria-hidden="true"></i>
             Add {{ subTransactionInfo.subTransactionTypeDescription }}
           </button>
-          <div [ngStyle]="{'margin-bottom': dropdownMarginBottom}">
+          <div [ngStyle]="{'min-height': memoDropdownSize}" style="height: auto">
             <div *ngIf="subTransactionInfo?.isParent && multipleSubTransactionInfo" ngbDropdown class="d-inline-block"
               placement="bottom-right" (openChange)="multipleMemoDropdownChanged($event)">
               <button class="btn btn-primary" id="jfMemoDropdown" ngbDropdownToggle>
