Re-adding textarea text from saved report

--- a/front-end/src/app/forms/form-99/reason/reason.component.html
+++ b/front-end/src/app/forms/form-99/reason/reason.component.html
@@ -259,15 +259,10 @@
                   </span>
                 </button>
               </div>
-              <div
-                class="editor"
-                contenteditable="true"
-                placeholder="Enter text here..."
-                role="textarea"
-                (input)="editorChange($event)"
-                (paste)="removeHTML($event)"
-                #htmlEditor
-              ></div>
+              <div>
+                <textarea class="editor full-width-textarea" formControlName="reasonText" contenteditable="true" placeholder="Enter text here..."
+                  role="textarea" (input)="editorChange($event)" (paste)="removeHTML($event)" #htmlEditor></textarea>
+              </div>
             </div>
           </div>
         </div>
