--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -138,6 +138,9 @@
             padding-inline-start: 40px;
           }
         }
+        .editor.full-width-textarea {
+          width: -webkit-fill-available;
+        }
         @include clearfix();
       }
       .file-attached-container {
